# python-project-52

./: .codeclimate.yml  .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  todo.md
.github/workflows/: check.yml
task_manager/: settings.py  tests.py  urls.py  utils.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasklabelrelation.json  tasks.json  test_data_for_users.json  users.json
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/labels/: labels_list.html
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/statuses/: statuses_index.html
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_executor.py  0002_alter_task_label.py
task_manager/tasks/templates/tasks/: show_task.html  tasks_list.html
task_manager/templates/: base.html  delete_confirmation_form.html  form.html  index.html  login.html
task_manager/users/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: test_data.json  users.json
task_manager/users/migrations/: 0001_initial.py
task_manager/users/templates/users/: delete_user.html  form.html  register.html  update_user.html  userlist.html
