[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager Django app"
authors = ["Yuliya Dzhumanazarova <yaschick451@gmail.com>"]
readme = "README.md"
repository = "https://github.com/yudzhum/python-project-52"
packages = [{include = "task_manager"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Django",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: Russian",
    "Natural Language :: English"
]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
django = "^4.2.3"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
django-bootstrap5 = "^23.3"
django-filter = "^23.2"
rollbar = "^0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
